--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,12 +28,12 @@ overwrite_original_rules=true
 # 代理分组 - Meta内核支持的格式
 custom_proxy_group=🚀代理`select`[]⚡低延迟`[]🇭🇰香港`[]🇸🇬新加坡`[]🇯🇵日本`[]🇺🇸美国`[]🇹🇼台湾`[]🌍其他`[]👆🏻指定`[]DIRECT`[]REJECT
 custom_proxy_group=👆🏻指定`select`.*
-custom_proxy_group=⚡低延迟`url-test`.*`https://cp.cloudflare.com/generate_204`900,,180
-custom_proxy_group=🇭🇰香港`url-test`(?i)(?=.*(港|HK|Hong))(?!.*(回国|校园|游戏|GAME)).*`https://cp.cloudflare.com/generate_204`900,,180
-custom_proxy_group=🇸🇬新加坡`url-test`(?i)(?=.*(新|狮|獅|SG|Singapore))(?!.*(回国|校园|游戏|GAME)).*`https://cp.cloudflare.com/generate_204`900,,180
-custom_proxy_group=🇯🇵日本`url-test`(?i)(?=.*(日|JP|Japan))(?!.*(回国|校园|游戏|GAME)).*`https://cp.cloudflare.com/generate_204`900,,180
-custom_proxy_group=🇺🇸美国`url-test`(?i)(?=.*(美|US|United States))(?!.*(回国|校园|游戏|GAME)).*`https://cp.cloudflare.com/generate_204`900,,180
-custom_proxy_group=🇹🇼台湾`url-test`(?i)(?=.*(台|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`https://cp.cloudflare.com/generate_204`900,,180
+custom_proxy_group=⚡低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
+custom_proxy_group=🇭🇰香港`url-test`(?i)(?=.*(港|HK|Hong))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬新加坡`url-test`(?i)(?=.*(新|狮|獅|SG|Singapore))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵日本`url-test`(?i)(?=.*(日|JP|Japan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸美国`url-test`(?i)(?=.*(美|US|United States))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼台湾`url-test`(?i)(?=.*(台|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍其他`select`^(?!.*(港|HK|Hong|台|TW|Taiwan|日|JP|Japan|新|狮|獅|SG|Singapore|美|US|United States|回国|校园|游戏|GAME)).*$
 
 # 应用分组
@@ -48,43 +48,53 @@ custom_proxy_group=📢广告隐私`select`[]REJECT`[]DIRECT`[]🚀代理
 custom_proxy_group=🐠漏网之鱼`select`[]🚀代理`[]DIRECT`[]👆🏻指定
 
 # 分流规则
+# 优化分流匹配顺序
+# 基础网络和直连高优先级
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-# 重要的国内服务优先匹配
+ruleset=DIRECT,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/ChinaOnly.list
+
+# 核心应用：支付和社交(中国大陆手机最常用)
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=📱社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
 ruleset=📱社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
-# 短视频和购物高频应用提前匹配
-ruleset=📱短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
-ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/JingDong.list
-ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Taobao.list
-ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PDD.list
-# 广告过滤
+
+# 广告拦截(提前过滤节省资源)
 ruleset=📢广告隐私,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
 ruleset=📢广告隐私,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
-# 游戏直播
+
+# 国内高频应用
+ruleset=📱短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu_Classical.yaml
+ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Taobao.list
+ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/JingDong.list
+ruleset=🛒购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/PDD.list
+ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+
+# 国内娱乐应用
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Douyu.list
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/HuYa.list
 ruleset=🎮游戏直播,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.yaml
-# 国内服务
-ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
-ruleset=🇨🇳直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Baidu/Baidu_Classical.yaml
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-# 国际服务
+
+# 国际常用应用(按使用频率排序)
+ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🌐国际,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
-ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🎬流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-# 基础分流规则
+
+# 代理规则
 ruleset=🚀代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-# 直连规则放到最后
-ruleset=DIRECT,https://raw.githubusercontent.com/zsokami/ACL4SSR/main/ChinaOnly.list
+
+# 兜底中国直连规则
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🇨🇳直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🇨🇳直连,[]GEOIP,LAN,no-resolve
 ruleset=🇨🇳直连,[]GEOIP,CN,no-resolve
+
+# 最终规则
 ruleset=🐠漏网之鱼,[]FINAL
 
 # TUN配置
