--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -27,15 +27,15 @@ overwrite_original_rules=true
 
 # 代理分组 - 极致电信网络优化
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
-custom_proxy_group=⚡ 最低延迟`url-test`.*`http://cp.cloudflare.com/generate_204`2400,,60,120
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`2400,,60,120
 custom_proxy_group=🔍 手动选择`select`.*
 
 # 地区分组 - 极致省电优化
-custom_proxy_group=🇭🇰 香港`url-test`(?i)(?=.*(港|香港|HK|Hong))(?!.*(回国|校园|游戏|GAME)).*`http://cp.cloudflare.com/generate_204`7200,,80
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)(?=.*(新|狮|獅|新加坡|SG|Singapore))(?!.*(回国|校园|游戏|GAME)).*`http://cp.cloudflare.com/generate_204`3600,,80
-custom_proxy_group=🇯🇵 日本`url-test`(?i)(?=.*(日|日本|JP|Japan))(?!.*(回国|校园|游戏|GAME)).*`http://cp.cloudflare.com/generate_204`3600,,80
-custom_proxy_group=🇺🇸 美国`url-test`(?i)(?=.*(美|美国|美國|US|USA|States))(?!.*(回国|校园|游戏|GAME)).*`http://cp.cloudflare.com/generate_204`3600,,80
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)(?=.*(台|台湾|台灣|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`http://cp.cloudflare.com/generate_204`3600,,80
+custom_proxy_group=🇭🇰 香港`url-test`(?i)(?=.*(港|香港|HK|Hong))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`7200,,80
+custom_proxy_group=🇸🇬 新加坡`url-test`(?i)(?=.*(新|狮|獅|新加坡|SG|Singapore))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`3600,,80
+custom_proxy_group=🇯🇵 日本`url-test`(?i)(?=.*(日|日本|JP|Japan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`3600,,80
+custom_proxy_group=🇺🇸 美国`url-test`(?i)(?=.*(美|美国|美國|US|USA|States))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`3600,,80
+custom_proxy_group=🇹🇼 台湾`url-test`(?i)(?=.*(台|台湾|台灣|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`3600,,80
 custom_proxy_group=🌍 其他`select`^(?!.*(港|香港|HK|Hong|台|台湾|台灣|TW|Taiwan|日|日本|JP|Japan|新|狮|獅|新加坡|SG|Singapore|美|美国|美國|US|USA|States|回国|校园|游戏|GAME)).*$
 
 # 应用分组 - 简化版
