--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,4 +1,4 @@
-# 针对中国大陆的手机的电信移动蜂窝数据网络Mihomo订阅转换配置
+# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置
 [custom]
 
 # 基础设置
@@ -101,17 +101,23 @@ dns:
   fallback:
     - tls://8.8.8.8:853    # 谷歌DOT主要
     - tls://1.1.1.1:853    # CloudflareDOT备用
+    - https://dns.google/dns-query  # 谷歌DoH备用
 
   fallback-filter:
     geoip: true
     geoip-code: CN
     ipcidr:
       - 240.0.0.0/4
+      - 127.0.0.0/8
+      - 0.0.0.0/32
     domain:
       - '+.google.com'
       - '+.youtube.com'
       - '+.github.com'
       - '+.facebook.com'
+      - '+.twitter.com'
+      - '+.instagram.com'
+      - '+.netflix.com'
 
   # 防DNS污染默认服务器
   default-nameserver:
