--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -116,6 +116,7 @@ dns:
       - '+.github.com'
       - '+.facebook.com'
       - '+.twitter.com'
+      - '+.x.com'
       - '+.instagram.com'
       - '+.netflix.com'
 
