--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,4 +1,6 @@
 # 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置
+# Mihomo (原Clash.Meta) 防DNS泄漏配置 v1.2
+# 适用于中国大陆电信蜂窝数据网络
 [custom]
 
 # 基础设置
@@ -38,7 +40,7 @@ custom_proxy_group=🇺🇸 美国`url-test`(?i)(?=.*(美|美国|美國|US|USA|S
 custom_proxy_group=🇹🇼 台湾`url-test`(?i)(?=.*(台|台湾|台灣|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`3600,,80
 custom_proxy_group=🌍 其他`select`^(?!.*(港|香港|HK|Hong|台|台湾|台灣|TW|Taiwan|日|日本|JP|Japan|新|狮|獅|新加坡|SG|Singapore|美|美国|美國|US|USA|States|回国|校园|游戏|GAME)).*$
 
-# 应用分组 - 简化版
+# 应用分组 - 更新社交媒体分类
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港
@@ -48,7 +50,7 @@ custom_proxy_group=🛒 购物平台`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
-# 精简分流规则 - 电信网络优化版
+# 精简分流规则 - 更新规则源
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
@@ -61,6 +63,8 @@ ruleset=🛒 购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
 ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Twitter.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -79,7 +83,7 @@ tun:
   mtu: 1500              # 电信网络最优MTU
   strict-route: true
 
-# DNS配置 - 阿里国内+谷歌国外优化
+# DNS配置 - 更新DNS服务器
 dns:
   enable: true
   ipv6: false
@@ -92,16 +96,22 @@ dns:
     - '+.stun.*.*'
     - '+.189.cn'
     - '+.10000.com'
+    - 'dns.msftncsi.com'
+    - 'networktest.windowsupdate.com'
+    - 'www.msftncsi.com'
+    - 'www.msftconnecttest.com'
 
   # 国内DNS - 阿里DNS纯IP
   nameserver:
     - 223.6.6.6       # 阿里DNS主要服务器
+    - 223.5.5.5       # 阿里DNS备用服务器
 
-  # 国外DNS - 谷歌DOT
+  # 国外DNS - 谷歌DOT与DoH
   fallback:
     - tls://8.8.8.8:853    # 谷歌DOT主要
     - tls://1.1.1.1:853    # CloudflareDOT备用
     - https://dns.google/dns-query  # 谷歌DoH备用
+    - https://cloudflare-dns.com/dns-query  # Cloudflare DoH
 
   fallback-filter:
     geoip: true
@@ -119,6 +129,9 @@ dns:
       - '+.x.com'
       - '+.instagram.com'
       - '+.netflix.com'
+      - '+.discord.com'
+      - '+.reddit.com'
+      - '+.tiktok.com'
 
   # 防DNS污染默认服务器
   default-nameserver:
@@ -153,6 +166,29 @@ secret: ""
 experimental:
   ignore-resolve-fail: true
 
+# 极致性能优化 - 更新参数
+dial-context-timeout: 4   # 进一步降低超时值
+find-process-mode: off
+memory-percentage: 6      # 更严格的内存限制
+proxy-check-ip-version: false
+disable-fake-ip-v6: true
+inbound-tfo: false
+skip-cert-verify: true    # 跳过证书验证，提高连接速度
+proxy-groups-config:      # 禁用所有组配置
+  enabled: false
+dns-simultaneous: true    # 并行DNS查询提高解析速度
+quic:
+  enabled: false          # 禁用QUIC支持
+request-timeout: 10
+proxy-check-timeout: 3
+sniff-forward-timeout: 1.5
+tcp-keep-alive-interval: 30
+resolve-destination-on-client: true
+disable-udp-traffic-stats: true  # 新增参数，减少资源占用
+force-proxy-over-http2: false    # 新增参数，优化连接
+tcp-receive-buffer-size: 65536   # 新增参数，优化网络速度
+tcp-send-buffer-size: 65536      # 新增参数，优化网络速度
+
 # 地理数据文件 - 极简版
 geox-url:
   geoip: "https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/release/geoip-lite.dat"
@@ -173,17 +209,3 @@ sniffer:
       ports: [443]
     HTTP:
       ports: [80]
-
-# 极致性能优化
-dial-context-timeout: 4   # 进一步降低超时值
-find-process-mode: off
-memory-percentage: 6      # 更严格的内存限制
-proxy-check-ip-version: false
-disable-fake-ip-v6: true
-inbound-tfo: false
-skip-cert-verify: true    # 跳过证书验证，提高连接速度
-proxy-groups-config:      # 禁用所有组配置
-  enabled: false
-dns-simultaneous: true    # 并行DNS查询提高解析速度
-quic:
-  enabled: false          # 禁用QUIC支持
