--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -160,10 +160,10 @@ tcp-no-delay: true
 tcp-fast-open: true
 tcp-early-data: false
 buffer-pkts: false
+mixed-port: 7890
 sniff-pure-tls: true
 tunnel-max-concurrent: 16
 udp-relay-mode: native
-keep-alive-interval: 45
 proxy-reject-drop: true
 disable-color: true
 disable-discovery: true
@@ -193,7 +193,6 @@ tcp-keep-alive-period: 30
 tcp-concurrent-reuse: true
 interface-name: ""
 proxy-check-timeout: 3
-sniff-timeout: 1.5
 
 # 协议设置
 max-udp-packet-size: 6144
