--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -74,7 +74,8 @@ tun:
   enable: true
   stack: system
   dns-hijack:
-    - 'any:53'
+    - any:53
+    - tcp://any:53
   auto-route: true
   auto-detect-interface: true
   mtu: 1500
