--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -44,27 +44,24 @@ custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[
 custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
-custom_proxy_group=🛒 购物平台`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
 # 分流规则
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
-ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
-ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
 ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
-ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
-ruleset=🛒 购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Taobao.list
-ruleset=🛒 购物平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/JingDong.list
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
 ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
 ruleset=🚀 全局代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
+ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
@@ -133,14 +130,14 @@ dns:
     - 119.29.29.29
 
   nameserver-policy:
-    'www.bilibili.com': [223.6.6.6, 223.5.5.5]
-    'api.bilibili.com': [223.6.6.6, 223.5.5.5]
-    '*.taobao.com': [223.6.6.6, 223.5.5.5]
-    '*.tmall.com': [223.6.6.6, 223.5.5.5]
-    '*.alipay.com': [223.6.6.6, 223.5.5.5]
-    '*.alicdn.com': [223.6.6.6, 223.5.5.5]
-    '*.aliyun.com': [223.6.6.6, 223.5.5.5]
-    '*.jd.com': [223.6.6.6, 223.5.5.5]
+    'www.bilibili.com': [223.6.6.6]
+    'api.bilibili.com': [223.6.6.6]
+    '*.taobao.com': [223.6.6.6]
+    '*.tmall.com': [223.6.6.6]
+    '*.alipay.com': [223.6.6.6]
+    '*.alicdn.com': [223.6.6.6]
+    '*.aliyun.com': [223.6.6.6]
+    '*.jd.com': [223.6.6.6]
     '*.qq.com': [119.29.29.29]
     '*.tencent.com': [119.29.29.29]
     '*.weixin.com': [119.29.29.29]
