--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,21 +28,15 @@ overwrite_original_rules=true
 # 代理分组 - 消除重复定义、优化分组顺序
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`150,,30
-custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*((?i:HK|Hong|香港|港)))(?!.*(台|日|韩|新|美|英|平|邀|群|网|网址|网站|获取|订阅|流量|套餐|TG)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*((?i:JP|Japan|日本|东京|大阪)))(?!.*(台|港|韩|新|美|英|平|邀|群|网|网址|网站|获取|订阅|流量|套餐|TG)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*((?i:US|USA|America|United.*?States|美国|美國|洛杉矶|西雅图|(?<![a-zA-Z])US(?![a-zA-Z]))))(?!.*(台|港|日|韩|新|英|平|邀|群|网|网址|网站|获取|订阅|流量|套餐|TG)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*((?i:TW|Taiwan|台湾|台灣)))(?!.*(港|日|韩|新|美|英|平|邀|群|网|网址|网站|获取|订阅|流量|套餐|TG)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*((?i:SG|Singapore|新加坡|狮城)))(?!.*(港|台|日|韩|美|英|平|邀|群|网|网址|网站|获取|订阅|流量|套餐|TG)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 其他`select`^(?!.*(HK|Hong|JP|Japan|SG|Singapore|TW|Taiwan|US|USA|America|日本|新加坡|台湾|美国|香港|港|狮城)).*$
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 
-# 地区分组
-custom_proxy_group=🇭🇰 香港`url-test`(?i)(?=.*(港|香港|HK|Hong))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)(?=.*(新|狮|獅|新加坡|SG|Singapore))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(?i)(?=.*(日|日本|JP|Japan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(?i)(?=.*(美|美国|美國|US|USA|States))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)(?=.*(台|台湾|台灣|TW|Taiwan))(?!.*(回国|校园|游戏|GAME)).*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 其他`select`^(?!.*(港|香港|HK|Hong|台|台湾|台灣|TW|Taiwan|日|日本|JP|Japan|新|狮|獅|新加坡|SG|Singapore|美|美国|美國|US|USA|States|回国|校园|游戏|GAME)).*$
+# 地区分组 - 优化正则匹配
+custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*(\b(HK|Hong|港|香港)\b))(?!.*(台|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*(\b(JP|Japan|日本|东京|大阪)\b))(?!.*(台|港|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*(\b(US|USA|America|美国|洛杉矶|硅谷|达拉斯)\b))(?!.*(台|港|日|韩|新)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*(\b(TW|Taiwan|台湾|台灣|台北)\b))(?!.*(港|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*(\b(SG|Singapore|新加坡|狮城)\b))(?!.*(港|台|日|韩|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌍 其他`select`^(?!.*(\b(HK|Hong|港|香港|JP|Japan|日本|东京|大阪|SG|Singapore|新加坡|狮城|TW|Taiwan|台湾|台灣|台北|US|USA|America|美国|洛杉矶|硅谷|达拉斯)\b)).*$
 
 # 应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
