--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -30,13 +30,13 @@ custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港
 custom_proxy_group=🔍 手动选择`select`.*
 custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
 
-# 地区分组 - 优化正则匹配
-custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*(\b(HK|Hong|港|香港)\b))(?!.*(台|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*(\b(JP|Japan|日本|东京|大阪)\b))(?!.*(台|港|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*(\b(US|USA|America|美国|洛杉矶|硅谷|达拉斯)\b))(?!.*(台|港|日|韩|新)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*(\b(TW|Taiwan|台湾|台灣|台北)\b))(?!.*(港|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*(\b(SG|Singapore|新加坡|狮城)\b))(?!.*(港|台|日|韩|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 其他`select`^(?!.*(\b(HK|Hong|港|香港|JP|Japan|日本|东京|大阪|SG|Singapore|新加坡|狮城|TW|Taiwan|台湾|台灣|台北|US|USA|America|美国|洛杉矶|硅谷|达拉斯)\b)).*$
+# 地区分组 - 修复匹配问题
+custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*(香港|港|HK|Hong))(?!.*(台|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*(日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*(美国|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*(台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*(新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌍 其他`select`^(?!.*(香港|港|HK|Hong|日本|东京|大阪|JP|Japan|新加坡|狮城|SG|Singapore|台湾|台灣|台北|TW|Taiwan|美国|洛杉矶|硅谷|达拉斯|US|USA|America)).*$
 
 # 应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
