--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,32 +28,35 @@ overwrite_original_rules=true
 # 代理分组 - 消除重复定义、优化分组顺序
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,30
+custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,20
 
-# 地区分组 - 修复匹配问题
-custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*(香港|港|HK|Hong))(?!.*(台|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*(日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*(美国|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*(台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*(新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 其他`select`^(?!.*(香港|港|HK|Hong|日本|东京|大阪|JP|Japan|新加坡|狮城|SG|Singapore|台湾|台灣|台北|TW|Taiwan|美国|洛杉矶|硅谷|达拉斯|US|USA|America)).*$
+# 地区分组 - 修复匹配问题，优化正则表达式
+custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*((?<![\w])港|香港|HK|Hong Kong))(?!.*(台|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*((?<![\w])日|日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*((?<![\w])美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*((?<![\w])台|台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*((?<![\w])新|新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌍 其他`select`^(?!.*((?<![\w])(港|香港|HK|Hong Kong|日|日本|东京|大阪|JP|Japan|新|新加坡|狮城|SG|Singapore|台|台湾|台灣|台北|TW|Taiwan|美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America|Transfer|Expire))).*$
 
 # 应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
-custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾
-custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港
+custom_proxy_group=📺 流媒体`select`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇹🇼 台湾`[]🇯🇵 日本
+custom_proxy_group=💬 社交聊天`select`[]DIRECT`[]🚀 全局代理`[]🇭🇰 香港`[]🇸🇬 新加坡
 custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
-# 分流规则 - 优化顺序，先精确后广泛
+# 分流规则 - 优化顺序，先直连后代理
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
 ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
 ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
 ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
 ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
 ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
@@ -66,7 +69,7 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# TUN配置
+# TUN配置 - 优化移动网络表现
 tun:
   enable: true
   stack: system
@@ -75,10 +78,10 @@ tun:
     - tcp://any:53
   auto-route: true
   auto-detect-interface: true
-  mtu: 1500
+  mtu: 9000
   strict-route: true
 
-# DNS配置
+# DNS配置 - 防止DNS泄露
 dns:
   enable: true
   ipv6: false
@@ -89,8 +92,22 @@ dns:
     - '*.lan'
     - 'localhost.ptlogin2.qq.com'
     - '+.stun.*.*'
+    - '+.stdpt.*.*'
+    - '+.stun.*.*.*'
+    - '+.stdpt.*.*.*'
+    - '+.msftncsi.com'
+    - '+.srv.nintendo.net'
+    - '+.ntp.org.cn'
+    - '+.pool.ntp.org'
+    - '+.stun.*.*.microsoft.com'
+    - '+.turns.*.*.microsoft.com'
+    - '+.cmpassport.com'
+    - '+.*.cmpassport.com'
+    - '+.10010.com'
+    - '+.*.10010.com'
     - '+.189.cn'
-    - '+.10000.com'
+    - '+.*.189.cn'
+    - '+.id6.me'
     - 'dns.msftncsi.com'
     - 'networktest.windowsupdate.com'
     - 'www.msftncsi.com'
@@ -98,7 +115,8 @@ dns:
 
   nameserver:
     - 223.6.6.6
-    - 223.5.5.5
+    - 119.29.29.29
+    - 114.114.114.114
 
   fallback:
     - tls://8.8.8.8:853
@@ -113,6 +131,13 @@ dns:
       - 240.0.0.0/4
       - 127.0.0.0/8
       - 0.0.0.0/32
+      - 100.64.0.0/10
+      - 169.254.0.0/16
+      - 192.0.0.0/24
+      - 192.0.2.0/24
+      - 198.51.100.0/24
+      - 203.0.113.0/24
+      - 224.0.0.0/4
     domain:
       - '+.google.com'
       - '+.youtube.com'
@@ -128,6 +153,7 @@ dns:
   default-nameserver:
     - 223.6.6.6
     - 119.29.29.29
+    - 114.114.114.114
 
   nameserver-policy:
     'www.bilibili.com': [223.6.6.6]
@@ -143,11 +169,12 @@ dns:
     '*.weixin.com': [119.29.29.29]
     '*.wechat.com': [119.29.29.29]
     '*.weiyun.com': [119.29.29.29]
+    '+.cn': [223.6.6.6]
 
   caching: true
   cache-size: 15360
 
-# 基础设置
+# 基础设置 - 移动网络优化
 log-level: silent
 mode: rule
 allow-lan: false
@@ -156,8 +183,8 @@ tcp-concurrent: true
 connection-multiplexing: true
 tcp-no-delay: true
 tcp-fast-open: true
-tcp-early-data: false
-buffer-pkts: false
+tcp-early-data: true
+buffer-pkts: true
 mixed-port: 7890
 sniff-pure-tls: true
 tunnel-max-concurrent: 16
@@ -165,7 +192,8 @@ udp-relay-mode: native
 proxy-reject-drop: true
 disable-color: true
 disable-discovery: true
-geo-auto-update: false
+geo-auto-update: true
+geo-auto-update-interval: 24
 tracing: false
 profile-memory: false
 external-controller: ""
@@ -173,31 +201,31 @@ secret: ""
 experimental:
   ignore-resolve-fail: true
 
-# 性能优化参数
-dial-context-timeout: 4
+# 性能优化参数 - 移动网络环境优化
+dial-context-timeout: 8
 find-process: false
-memory-percentage: 6
+memory-percentage: 10
 proxy-check-ip-version: false
 disable-fake-ip-v6: true
-inbound-tfo: false
+inbound-tfo: true
 skip-cert-verify: true
 proxy-groups-config:
   enabled: false
 dns-simultaneous: true
 quic:
-  enabled: false
-transport-timeout: 10
-tcp-keep-alive-period: 30
+  enabled: true
+transport-timeout: 15
+tcp-keep-alive-period: 60
 tcp-concurrent-reuse: true
 interface-name: ""
-proxy-check-timeout: 3
+proxy-check-timeout: 5
 
-# 协议设置
-max-udp-packet-size: 6144
+# 协议设置 - 针对移动网络调整
+max-udp-packet-size: 8192
 http:
-  max-connections-per-host: 8
-  connection-pool-size: 128
-  idle-timeout: 60
+  max-connections-per-host: 16
+  connection-pool-size: 256
+  idle-timeout: 120
 
 # 地理数据文件
 geox-url:
@@ -210,12 +238,12 @@ geodata-mode: true
 geodata-loader: memconservative
 geoip-maxmind-compatibility: true
 
-# 网络嗅探
+# 网络嗅探 - 增强域名识别
 sniffer:
   enable: true
   force-dns-mapping: true
   override-destination: true
-  parse-pure-ip: false
+  parse-pure-ip: true
   sniff:
     TLS:
       ports: [443, 8443]
@@ -226,5 +254,7 @@ sniffer:
     - '*.iCloud.*'
     - '*.10010.com'
     - '*.189.cn'
+    - '*.cmpassport.com'
+    - '*.opencloud.wostore.cn'
     - '+.cn'
-  sniff-timeout: 1.5
+  sniff-timeout: 2.0
