--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -69,10 +69,10 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# TUN配置 - 优化移动网络表现
+# TUN配置 - 更高性能优化
 tun:
   enable: true
-  stack: system
+  stack: mixed
   dns-hijack:
     - any:53
     - tcp://any:53
@@ -80,6 +80,9 @@ tun:
   auto-detect-interface: true
   mtu: 9000
   strict-route: true
+  endpoint-independent-nat: true
+  include-uid: [0]
+  include-uid-range: [0-999999]
 
 # DNS配置 - 防止DNS泄露
 dns:
@@ -201,31 +204,50 @@ secret: ""
 experimental:
   ignore-resolve-fail: true
 
-# 性能优化参数 - 移动网络环境优化
-dial-context-timeout: 8
+# 性能优化参数 - 额外性能提升
+dial-context-timeout: 5
 find-process: false
-memory-percentage: 10
+find-process-mode: off
+memory-percentage: 15
 proxy-check-ip-version: false
 disable-fake-ip-v6: true
 inbound-tfo: true
 skip-cert-verify: true
 proxy-groups-config:
   enabled: false
+  interval: 600
 dns-simultaneous: true
 quic:
   enabled: true
-transport-timeout: 15
-tcp-keep-alive-period: 60
+  low-latency: true
+  max-udp-relay-packet-size: 8192
+transport-timeout: 10
+tcp-keep-alive-period: 30
 tcp-concurrent-reuse: true
 interface-name: ""
 proxy-check-timeout: 5
+store-selected: true
+store-fake-ip: true
+ebpf:
+  redirect-to-tun:
+    - eth0
+    - en0
+  auto-redir: true
 
-# 协议设置 - 针对移动网络调整
-max-udp-packet-size: 8192
+# 协议设置 - 更高效传输参数
+max-udp-packet-size: 10240
 http:
-  max-connections-per-host: 16
-  connection-pool-size: 256
-  idle-timeout: 120
+  max-connections-per-host: 32
+  connection-pool-size: 512
+  idle-timeout: 60
+http2:
+  max-concurrent-streams: 1024
+tls:
+  fast-open: true
+  reuse-session: true
+  session-ticket: true
+  session-cache-size: 1024
+  h2-idempotent-methods: [HEAD, GET, OPTIONS]
 
 # 地理数据文件
 geox-url:
@@ -238,17 +260,14 @@ geodata-mode: true
 geodata-loader: memconservative
 geoip-maxmind-compatibility: true
 
-# 网络嗅探 - 增强域名识别
+# 网络嗅探 - 性能优化版
 sniffer:
   enable: true
   force-dns-mapping: true
   override-destination: true
   parse-pure-ip: true
-  sniff:
-    TLS:
-      ports: [443, 8443]
-    HTTP:
-      ports: [80, 8080]
+  sniffing: [tls, http]
+  port-whitelist: [80, 443, 8000-9000]
   skip-domain:
     - 'Mijia Cloud'
     - '*.iCloud.*'
@@ -257,4 +276,6 @@ sniffer:
     - '*.cmpassport.com'
     - '*.opencloud.wostore.cn'
     - '+.cn'
-  sniff-timeout: 2.0
+  sniff-timeout: 1.0
+  always-resolve-first: false
+  forest-fire: true
