--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -1,4 +1,4 @@
-# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置
+# 针对中国大陆电信蜂窝数据网络的Mihomo订阅转换优化配置（二次优化版）
 [custom]
 
 # 基础设置
@@ -47,7 +47,7 @@ custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
 
-# 分流规则 - 优化顺序，先直连后代理
+# 分流规则 - 优化顺序，先直连后代理，并添加Loyalsoldier规则集
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
@@ -64,12 +64,14 @@ ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
 ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
-ruleset=🚀 全局代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+# 添加Loyalsoldier规则集
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
-# TUN配置 - 更高性能优化
+# TUN配置 - 更高性能优化，添加exclude-interface
 tun:
   enable: true
   stack: mixed
@@ -83,8 +85,9 @@ tun:
   endpoint-independent-nat: true
   include-uid: [0]
   include-uid-range: [0-999999]
+  exclude-interface: ["tailscale0", "utun"]  # 避免与VPN接口冲突
 
-# DNS配置 - 防止DNS泄露
+# DNS配置 - 防止DNS泄露，添加Volcano DNS作为fallback
 dns:
   enable: true
   ipv6: false
@@ -122,6 +125,7 @@ dns:
     - 114.114.114.114
 
   fallback:
+    - https://1.12.12.12/dns-query  # Volcano DNS
     - tls://8.8.8.8:853
     - tls://1.1.1.1:853
     - https://dns.google/dns-query
