--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -28,14 +28,14 @@ overwrite_original_rules=true
 # 代理分组
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
 custom_proxy_group=🔍 手动选择`select`.*
-custom_proxy_group=⚡ 最低延迟`url-test`.*`https://www.gstatic.com/generate_204`180,,20
+custom_proxy_group=⚡ 最低延迟`url-test`(?i)^(?!^⚡ 最低延迟$).*$`https://www.gstatic.com/generate_204`180,,20
 
 # 地区分组
-custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?=.*((?<![\w])港|香港|HK|Hong Kong))(?!.*(台|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?=.*((?<![\w])日|日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?=.*((?<![\w])美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?=.*((?<![\w])台|台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?=.*((?<![\w])新|新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?!^🇭🇰 香港$)(?=.*((?<![\w])港|香港|HK|Hong Kong))(?!.*(台|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?!^🇯🇵 日本$)(?=.*((?<![\w])日|日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?!^🇺🇸 美国$)(?=.*((?<![\w])美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?!^🇹🇼 台湾$)(?=.*((?<![\w])台|台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?!^🇸🇬 新加坡$)(?=.*((?<![\w])新|新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌍 其他`select`^(?!.*((?<![\w])(港|香港|HK|Hong Kong|日|日本|东京|大阪|JP|Japan|新|新加坡|狮城|SG|Singapore|台|台湾|台灣|台北|TW|Taiwan|美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America|Transfer|Expire))).*$
 
 # 应用分组
