--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -2,7 +2,8 @@
 [custom]
 
 # 基础设置
-exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
+exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(
+  \d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
 
 # Emoji
 add_emoji=true
@@ -26,17 +27,26 @@ enable_rule_generator=true
 overwrite_original_rules=true
 
 # 代理分组
+enable_proxy_groups: true
 custom_proxy_group=🚀 全局代理`select`[]⚡ 最低延迟`[]🇭🇰 香港`[]🇸🇬 新加坡`[]🇯🇵 日本`[]🇺🇸 美国`[]🇹🇼 台湾`[]🌍 其他`[]🔍 手动选择`[]DIRECT
-custom_proxy_group=🔍 手动选择`select`.*
+# 手动选择组, 排除自身
+custom_proxy_group=🔍 手动选择`select`^(?!^🔍 手动选择$).*$
+# 最低延迟组, 排除自身
 custom_proxy_group=⚡ 最低延迟`url-test`(?i)^(?!^⚡ 最低延迟$).*$`https://www.gstatic.com/generate_204`180,,20
 
 # 地区分组
+# 香港组, 排除自身
 custom_proxy_group=🇭🇰 香港`url-test`(?i)^(?!^🇭🇰 香港$)(?=.*((?<![\w])港|香港|HK|Hong Kong))(?!.*(台|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+# 日本组, 排除自身
 custom_proxy_group=🇯🇵 日本`url-test`(?i)^(?!^🇯🇵 日本$)(?=.*((?<![\w])日|日本|东京|大阪|JP|Japan))(?!.*(台|港|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+# 美国组, 排除自身
 custom_proxy_group=🇺🇸 美国`url-test`(?i)^(?!^🇺🇸 美国$)(?=.*((?<![\w])美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America))(?!.*(台|港|日|韩|新|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+# 台湾组, 排除自身
 custom_proxy_group=🇹🇼 台湾`url-test`(?i)^(?!^🇹🇼 台湾$)(?=.*((?<![\w])台|台湾|台灣|台北|TW|Taiwan))(?!.*(港|日|韩|新|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
+# 新加坡组, 排除自身
 custom_proxy_group=🇸🇬 新加坡`url-test`(?i)^(?!^🇸🇬 新加坡$)(?=.*((?<![\w])新|新加坡|狮城|SG|Singapore))(?!.*(港|台|日|韩|美|Transfer|Expire)).*$`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌍 其他`select`^(?!.*((?<![\w])(港|香港|HK|Hong Kong|日|日本|东京|大阪|JP|Japan|新|新加坡|狮城|SG|Singapore|台|台湾|台灣|台北|TW|Taiwan|美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America|Transfer|Expire))).*$
+# 其他组, 排除自身
+custom_proxy_group=🌍 其他`select`^(?!^🌍 其他$)^(?!.*((?<![\w])(港|香港|HK|Hong Kong|日|日本|东京|大阪|JP|Japan|新|新加坡|狮城|SG|Singapore|台|台湾|台灣|台北|TW|Taiwan|美|美国|美國|洛杉矶|硅谷|达拉斯|US|USA|America|Transfer|Expire))).*$
 
 # 应用分组
 custom_proxy_group=🌐 国际网站`select`[]🚀 全局代理`[]🇺🇸 美国`[]🇭🇰 香港`[]🇸🇬 新加坡
@@ -100,10 +110,6 @@ dns:
     - '+.stdpt.*.*'
     - '+.stun.*.*.*'
     - '+.stdpt.*.*.*'
-    - '+.msftncsi.com'
-    - '+.srv.nintendo.net'
-    - '+.ntp.org.cn'
-    - '+.pool.ntp.org'
     - '+.stun.*.*.microsoft.com'
     - '+.turns.*.*.microsoft.com'
     - '+.cmpassport.com'
@@ -180,27 +186,17 @@ dns:
   caching: true
   cache-size: 15360
 
-# 基础设置 - 移动网络优化
-log-level: silent
-mode: rule
-allow-lan: false
-unified-delay: true
-tcp-concurrent: true
-connection-multiplexing: true
-tcp-no-delay: true
-tcp-fast-open: true
-tcp-early-data: true
-buffer-pkts: true
-mixed-port: 7890
-sniff-pure-tls: true
-tunnel-max-concurrent: 16
-udp-relay-mode: native
-proxy-reject-drop: true
-disable-color: true
-disable-discovery: true
-geo-auto-update: true
-geo-auto-update-interval: 24
-tracing: false
+  nameserver-policy:
+    'www.bilibili.com': [223.6.6.6]
+    'api.bilibili.com': [223.6.6.6]
+
+  caching: true
+  cache-size: 15360
+
+  dns-simultaneous: true
+
+  tracing: false
+
 profile-memory: false
 external-controller: ""
 secret: ""
