--- a/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
+++ b/ACL4SSR_Online_Full_Mannix_No_DNS_Leak.ini
@@ -4,22 +4,24 @@
 # 基础设置
 exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|(\d[\d.]*\s*[MG]B[^\dA-Za-z]+|[:：]\s*)\d[\d.]*\s*GB(?![\dA-Za-z])|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|🔰 (ID|HSD|SNI):|📝 Gói:)
 
-# Emoji
-add_emoji=true
-remove_old_emoji=true
+# 排除中国国旗匹配，仅匹配其他国家地区的 Emoji
 emoji=(?!🇨🇳)[🇦-🇿]{2},
-emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
+
+# 明确国家/地区匹配规则，避免重复匹配
 emoji=^(?!.*[🇦-🇿]{2}).*(香港|HK|Hong Kong),🇭🇰
+emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
 emoji=^(?!.*[🇦-🇿]{2}).*(日本|东京|大阪|名古屋|埼玉|福冈|JP|Japan|Tokyo|Osaka|Nagoya|Saitama|Fukuoka),🇯🇵
 emoji=^(?!.*[🇦-🇿]{2}).*(新加坡|狮城|SG|Singapore),🇸🇬
-emoji=^(?!.*[🇦-🇿]{2}).*(台湾|台北|新北|彰化|高雄|TW|Taiwan|Taipei|New Taipei|Changhua|Kaohsiung),🇹🇼
+emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
+emoji=^(?!.*[🇦-🇿]{2}).*(美国|华盛顿|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|旧金山|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|纽约|丹佛|加利福尼亚|弗吉尼亚|得克萨斯|亚特兰大|佛罗里达|迈阿密|US|USA|United States|Washington|Portland|Dallas|Oregon|Phoenix|Fremont|Silicon Valley|San Francisco|Las Vegas|Los Angeles|San Jose|Santa Clara|Seattle|Chicago|New York|Denver|California|Virginia|Texas|Atlanta|Florida|Miami),🇺🇸
 emoji=^(?!.*[🇦-🇿]{2}).*(英国|英格兰|伦敦|曼彻斯特|UK|United Kingdom|England|London|Manchester),🇬🇧
 emoji=^(?!.*[🇦-🇿]{2}).*(加拿大|多伦多|蒙特利尔|温哥华|CA|Canada|Toronto|Montreal|Vancouver),🇨🇦
 emoji=^(?!.*[🇦-🇿]{2}).*(德国|法兰克福|柏林|DE|Germany|Frankfurt|Berlin),🇩🇪
 emoji=^(?!.*[🇦-🇿]{2}).*(法国|巴黎|FR|France|Paris),🇫🇷
-emoji=^(?!.*[🇦-🇿]{2}).*(韩国|首尔|KR|Korea|South Korea|Seoul),🇰🇷
 emoji=^(?!.*[🇦-🇿]{2}).*(澳大利亚|悉尼|墨尔本|AU|Australia|Sydney|Melbourne),🇦🇺
 emoji=^(?!.*[🇦-🇿]{2}).*(俄罗斯|莫斯科|圣彼得堡|RU|Russia|Moscow|Saint Petersburg),🇷🇺
+
+# 非节点用途关键词屏蔽，避免误判为节点添加无关 emoji
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|搜|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|订阅|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|过滤|@|：|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]|\d{1,3}(?!\d))|^[^:]+:(?![\da-f]{0,4}:|\s*\d{1,5}([/?]|\s*$)))),ℹ️
 
 enable_rule_generator=true
@@ -47,6 +49,28 @@ custom_proxy_group=🇨🇳 国内网站`select`[]DIRECT
 custom_proxy_group=📱 短视频`select`[]DIRECT
 custom_proxy_group=📢 广告拦截`select`[]REJECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 全局代理`[]DIRECT
+
+# 分流规则 - 优化顺序，先直连后代理
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyListChina.list
+ruleset=📢 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyPrivacy.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/WeChat.list
+ruleset=💬 社交聊天,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Tencent.list
+ruleset=📱 短视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DouYin.list
+ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=📺 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/X/X.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
+ruleset=🌐 国际网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Telegram.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/UnionPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AliPay.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/ByteDance/ByteDance_Classical.yaml
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Alibaba/Alibaba_Classical.yaml
+ruleset=🚀 全局代理,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+ruleset=🇨🇳 国内网站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🇨🇳 国内网站,[]GEOIP,CN,no-resolve
+ruleset=🐟 漏网之鱼,[]FINAL
 
 # 分流规则 - 优化顺序，先直连后代理
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
